--- a/CSS/style.css
+++ b/CSS/style.css
@@ -107,5 +107,13 @@ padding: 40px 0 ;
     align-items: center;
     justify-content: center; 
     border-radius: 4px;
+    
+}
 
-} 
+.dsmovie-from-container{
+ padding: 40px 0; 
+max-width: 480px;
+
+
+}
+
