--- a/CSS/style.css
+++ b/CSS/style.css
@@ -15,10 +15,9 @@
     margin: 0;
     box-sizing: border-box; 
     font-family: 'Open Sans', sans-serif;
-
 }
 
-h1, h2, h3, h4, h5, h6{
+h1, h2, h3, h4, h5, h6 {
     margin: 0;
 }
 
@@ -26,14 +25,14 @@ html, body {
      background-color: var(--bg-gray);
 }
 
-header{
-
+header {
     background-color: var(--color-primary);
     color: var(--white);
     height: 60px;
     display: flex;
     align-items: center;
 }
+
 nav {
     display: flex;
     align-items: center;
@@ -55,23 +54,22 @@ a, a:hover {
     color: unset;
 }
 
-.dsmovie-contact-container{
+.dsmovie-contact-container {
     display: flex; 
     align-items: center;
 }
 
-.dsmovie-contact-container img{
+.dsmovie-contact-container img {
    margin-right: 10px;
 }
 
 #dsmovie-card-list {
-padding: 40px 10px;
+padding: 0 10px;
 
 }
 
 .dsmovie-card {
    width: 100%;
-    
 }
 
 .dsmovie-card img {
@@ -88,7 +86,6 @@ padding: 40px 10px;
     align-items: center;
     border-radius: 0 0 8px 8px;
     min-height: 190px;
-
 }
 
 .dsmovie-card-description h3 {
@@ -110,13 +107,11 @@ padding: 40px 10px;
     justify-content: center; 
     border-radius: 4px;
     border: 0;
-    
 }
 
 .dsmovie-from-container {
  padding: 40px 0; 
 max-width: 480px;
-
 }
 
 .dsmovie-form-description {
@@ -130,7 +125,7 @@ border-radius: 0 0 8px 8px;
 
 .dsmovie-form {
     width: 100%;
-    }
+}
     
 .dsmovie-form-btn-container {
     height: 100px;    
@@ -138,20 +133,20 @@ border-radius: 0 0 8px 8px;
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
-    }
+}
 
-.dsmovie-form-description h3{
+.dsmovie-form-description h3 {
     font-size: 13px;
     font-weight: 700;
     margin-bottom: 20px;
 }
 
-.dsmovie-card-description-buttom{
+.dsmovie-card-description-buttom {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
-.dsmovie-card-description-buttom h4{
+.dsmovie-card-description-buttom h4 {
     font-size: 16px;
     font-weight: 700;
     color: var(--star-yellow);
@@ -164,19 +159,62 @@ border-radius: 0 0 8px 8px;
     margin-bottom:10px ;
 }
 
-.dsmovie-card-description-buttom img{
+.dsmovie-card-description-buttom img {
 width: 22px;
-
 }
 
-.dsmovie-form-group{
+.dsmovie-form-group {
     margin-bottom: 20px;
 }
 
-.dsmovie-form-group label{
+.dsmovie-form-group label {
     font-size: 12px;
     color:var(--text-light-gray)
 }
 
+.dsmovie-paginetion-container {
+    padding: 15px 0;
+    display: flex;
+    justify-content: center;
+}
 
+.dsmovie-paginetion-box {
+    width: 180px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
 
+.dsmovie-paginetion-box p {
+    margin: 0;
+    font-size: 12px;
+    color: var(--color-primary);
+    font-weight: 400;
+}
+
+.dsmovie-paginetion-box button {
+   width: 40px;
+   height: 40px; 
+   border: 1px solid var(--color-primary);
+   border-radius: 4px;
+   background-color: var(--white);
+   display: flex;
+   justify-content: center;
+   align-items: center;
+}
+
+.dsmovie-paginetion-box button img {
+   filter: brightness(0) saturate(100%) invert(22%) sepia(29%) saturate(5247%) hue-rotate(235deg) brightness(101%) contrast(89%);
+}
+
+.dsmovie-paginetion-box button:disabled img {
+   filter: unset;
+
+}
+.dsmovie-paginetion-box button:disabled {
+    border: 1px solid var(--text-light-gray);
+} 
+
+.dsmovie-flip-horizontal {
+    transform: rotate(180deg);
+}
