--- a/CSS/style.css
+++ b/CSS/style.css
@@ -65,17 +65,16 @@ a, a:hover {
 }
 
 #dsmovie-card-list {
-
-padding: 40px 0 ;
+padding: 40px 10px;
 
 }
 
-.dsmovie-card{
+.dsmovie-card {
    width: 100%;
     
 }
 
-.dsmovie-card img{
+.dsmovie-card img {
    width: 100%;
    border-radius: 8px 8px 0 0 ;
 }
@@ -88,18 +87,18 @@ padding: 40px 0 ;
     justify-content: space-between;
     align-items: center;
     border-radius: 0 0 8px 8px;
-    min-height: 220px;
+    min-height: 190px;
 
 }
 
 .dsmovie-card-description h3 {
     font-size: 14px;
     font-weight: 700;
-    margin-bottom: 25px;
+    margin-bottom:10px;
     text-align: center;
 }
 
-.dsmovie-btn {
+.dsmovie-btn, .dsmovie-btn:hover {
     width: 180px;
     height: 40px;
     background-color: var(--color-primary);
@@ -114,20 +113,32 @@ padding: 40px 0 ;
     
 }
 
-.dsmovie-from-container{
+.dsmovie-from-container {
  padding: 40px 0; 
 max-width: 480px;
 
 }
 
-.dsmovie-form-description{
-brackground-color:var(--white);
+.dsmovie-form-description {
+background-color:var(--white);
 padding: 20px;
 display: flex;
 flex-direction: column;
 align-items: center;
 border-radius: 0 0 8px 8px;
 }
+
+.dsmovie-form {
+    width: 100%;
+    }
+    
+.dsmovie-form-btn-container {
+    height: 100px;    
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    }
 
 .dsmovie-form-description h3{
     font-size: 13px;
@@ -158,10 +169,6 @@ width: 22px;
 
 }
 
-.dsmovie-form{
-width: 100%;
-}
-
 .dsmovie-form-group{
     margin-bottom: 20px;
 }
@@ -171,12 +178,5 @@ width: 100%;
     color:var(--text-light-gray)
 }
 
-.dsmovie-form-btn-container
-{
-height: 100px;    
-display: flex;
-flex-direction: column;
-align-items: center;
-justify-content: space-between;
-}
+
 
